--- a/css/index.css
+++ b/css/index.css
@@ -1,24 +1,3 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-}
-
-body {
-    font-family: 'Noto Sans KR', sans-serif;
-}
-
-a {
-    font-family: 'Noto Sans KR', sans-serif;
-}
-
-.no-drag {
-    -ms-user-select: none;
-    -moz-user-select: -moz-none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    user-select:none;
-}
-
 .intro {
     position: relative;
     display: flex;
@@ -66,7 +45,7 @@ a {
     width: 37px;
     height: 37px;
     opacity: 0;
-    background-image: url(./resources/images/main/down-arrow.png);
+    background-image: url('../resources/images/index/down-arrow.png');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
@@ -145,11 +124,11 @@ a {
 }
 
 .rock-paper-scissors .game__image:after {
-    background-image: url('./resources/images/main/rock-paper-scissors.png');
+    background-image: url('../resources/images/index/rock-paper-scissors.png');
 }
 
 .preparing .game__image:after {
-    background-image: url('./resources/images/main/question.png');
+    background-image: url('../resources/images/index/question.png');
 }
 
 .game__title {
@@ -159,11 +138,6 @@ a {
 
 .game__desc {
     font-size: 17px;
-}
-
-.show {
-    display: inline-block;
-    opacity: 1;
 }
 
 /* Tablet */
