--- a/css/common/styles.css
+++ b/css/common/styles.css
@@ -15,6 +15,15 @@ textarea {
     color: #3A3845;
 }
 
+a {
+    text-decoration: none;
+}
+
+button {
+    border: none;
+    padding: 0;
+}
+
 button:focus,
 button:active,
 input:focus,
@@ -23,14 +32,6 @@ textarea:focus,
 textarea:active {
     outline: none;
     box-shadow: none;
-}
-
-a {
-    text-decoration: none;
-}
-
-button {
-    border: none;
 }
 
 button:hover {
