:lipstick: 결과 출력 모달창 스타일 추가

--- a/css/index.css
+++ b/css/index.css
@@ -140,6 +140,11 @@
     font-size: 17px;
 }
 
+.show {
+    visibility: visible;
+    opacity: 1;
+}
+
 /* Tablet */
 @media screen and (min-width: 768px) {
     .intro__title {
