--- a/css/game-rps.css
+++ b/css/game-rps.css
@@ -129,42 +129,55 @@
     background-repeat: no-repeat;
 }
 
-.board__button {
-    width: 60px;
-    margin-right: 10px;
-    background-color: #FFFFFF;
-    border: 1px solid rgb(209,213,219);
-    border-radius: .5rem;
-    color: #3A3845;
-    font-size: .875rem;
-    font-weight: 600;
-    line-height: 1.25rem;
-    padding: .75rem 1rem;
-    text-align: center;
-    text-decoration: none #D1D5DB solid;
-    text-decoration-thickness: auto;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-    cursor: pointer;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
+.modal {
+    visibility: hidden;
 }
 
-.board__button:hover {
-    background-color: rgb(249,250,251);
+.modal__layer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background: rgba(0, 0, 0, 0.5);
 }
 
-.board__button:focus {
-    outline: 2px solid transparent;
-    outline-offset: 2px;
+.modal__content {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+    height: 150px;
+    padding: 0 20px;
+    z-index: 9999;
+    border-radius: 5px;
+    background-color: #FFF;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
 }
 
-.board__button:focus-visible {
-    box-shadow: none;
+.modal__content-title {
+    margin-bottom: 20px;
+    font-size: 18px;
 }
 
-.board__button:last-child {
-    margin-right: 0;
+.modal__content-close {
+    margin-bottom: 20px;
+    font-size: 14px;
+}
+
+.modal__content-close-button {
+    padding: 5px;
+}
+
+.show {
+    visibility: visible;
+    opacity: 1;
 }
 
 /* Tablet */
