--- a/css/game-rps.css
+++ b/css/game-rps.css
@@ -15,7 +15,7 @@
 
 .menu__bar {
     display: flex;
-    justify-content: space-between;;
+    justify-content: flex-end;
     align-items: flex-end;
     width: 85%;
     height: 10vh;
@@ -119,18 +119,14 @@
 }
 
 .board__image {
-    content: '';
     width: 100%;
-    height: 320px;
+    height: 250px;
     min-height: 220px;
-    background-image: url('../resources/images/game-rps/scissors.png');
-    background-position: center center;
-    background-size: contain;
-    background-repeat: no-repeat;
 }
 
 .modal {
     visibility: hidden;
+    letter-spacing: -0.04em;
 }
 
 .modal__layer {
@@ -153,8 +149,8 @@
     justify-content: center;
     align-items: center;
     width: 70%;
-    height: 150px;
-    padding: 0 20px;
+    height: auto;
+    padding: 20px;
     z-index: 9999;
     border-radius: 5px;
     background-color: #FFF;
@@ -162,17 +158,28 @@
 }
 
 .modal__content-title {
-    margin-bottom: 20px;
-    font-size: 18px;
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+.modal__content-title--result {
+    font-size: 27px;
+    margin-bottom: 10px;
+}
+
+.modal__content-title--desc {
+    font-size: 20px;
 }
 
 .modal__content-close {
+    font-size: 17px;
     margin-bottom: 20px;
-    font-size: 14px;
 }
 
 .modal__content-close-button {
-    padding: 5px;
+    width: 100%;
+    padding: 8px;
+    font-size: 17px;
 }
 
 .show {
@@ -209,7 +216,7 @@
         min-height: 250px;
     }
 
-    .board__button {
+    .white-button {
         width: 150px;
         height: 80px;
         margin-right: 30px;
@@ -226,7 +233,7 @@
 
     .board__score {
         margin-bottom: 15px;
-        font-size: 30px;
+        font-size: 27px;
     }
 
     .board__image {
@@ -234,9 +241,9 @@
         min-height: 280px;
     }
 
-    .board__button {
+    .white-button {
         width: 200px;
-        height: 80px;
+        height: 70px;
         margin-right: 50px;
         font-size: 23px;
     }
