--- a/css/game-rps.css
+++ b/css/game-rps.css
@@ -57,11 +57,11 @@
     background-size: contain;
 }
 
-.menu__bar-list-item--button.home-button {
+.menu__bar-list-item--button#home-button {
     background-image: url('../resources/images/common/home.png');
 }
 
-.menu__bar-list-item--button.stop-button {
+.menu__bar-list-item--button#stop-button {
     background-image: url('../resources/images/common/stop.png');
 }
 
@@ -150,7 +150,7 @@
     align-items: center;
     width: 70%;
     height: auto;
-    padding: 20px;
+    padding: 30px;
     z-index: 9999;
     border-radius: 5px;
     background-color: #FFF;
@@ -172,8 +172,8 @@
 }
 
 .modal__content-close {
-    font-size: 17px;
-    margin-bottom: 20px;
+    font-size: 16px;
+    margin-bottom: 25px;
 }
 
 .modal__content-close-button {
@@ -241,10 +241,8 @@
         min-height: 280px;
     }
 
-    .white-button {
-        width: 200px;
-        height: 70px;
-        margin-right: 50px;
-        font-size: 23px;
+    .modal__content {
+        width: 40%;
+        max-width: 600px;
     }
 }
