--- a/css/game-rps.css
+++ b/css/game-rps.css
@@ -33,8 +33,23 @@
 }
 
 .menu__bar-life {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
     font-size: 17px;
     color: #FFF;
+}
+
+.menu__bar-life::before {
+    content: '';
+    display: block;
+    width: 20px;
+    height: 20px;
+    margin: 0 5px 1px 0;
+    background-image: url('./../img/common/heart.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .menu__bar-list {
@@ -174,12 +189,17 @@
 
 .modal__content-title--result-life {
     position: fixed;
-    top: 4%;
+    top: 6%;
     left: 50%;
-    transform: translate(-50%, -4%);
+    transform: translate(-50%, -6%);
     font-weight: 700;
     font-size: 14px;
     opacity: 0;
+}
+
+.modal__content-title--result-life-img {
+    width: 18px;
+    height: 18px;
 }
 
 @keyframes blinkingEffect {
@@ -239,7 +259,13 @@
     }
 
     .menu__bar-life {
-        font-size: 22px;
+        font-size: 25px;
+    }
+
+    .menu__bar-life::before {
+        width: 28px;
+        height: 28px;
+        margin: 0 5px 2px 0;
     }
 
     .board__score {
@@ -268,6 +294,11 @@
 
     .modal__content-title--result-life {
         font-size: 17px;
+    }
+
+    .modal__content-title--result-life-img {
+        width: 21px;
+        height: 21px;
     }
     
     .modal__content-title--score {
@@ -299,7 +330,11 @@
     }
 
     .menu__bar-life {
-        font-size: 24px;
+        font-size: 27px;
+    }
+
+    .menu__bar-life::before {
+        margin: 0 6px 3px 0;
     }
 
     .board__score {
@@ -315,5 +350,10 @@
     .modal__content {
         width: 50%;
         max-width: 600px;
+    }
+
+    .modal__content-title--result-life-img {
+        width: 24px;
+        height: 24px;
     }
 }
