--- a/css/game-fdc.css
+++ b/css/game-fdc.css
@@ -88,7 +88,7 @@
     background-image: url('./../img/common/home.png');
 }
 
-.battle {
+.game {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -99,16 +99,26 @@
     box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
 }
 
-.battle::after {
+.game::after {
     content: '';
     display: block;
     padding-bottom: 100%;
 }
 
-.battle__board {
-    width: 90%;
-    height: 90%;
-    border: 1px solid lightblue;
+.palette {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+    padding: 3px;
+}
+
+.palette-item {
+    width: 50%;
+    height: 50%;
+    border: 3px solid #FFF;
+    border-radius: 10px;
+    background-color: #D76D77;
 }
 
 .show {
