--- a/css/index.css
+++ b/css/index.css
@@ -6,9 +6,7 @@
     align-items: center;
     width: 100%;
     height: 100vh;
-    background: #3A1C71;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
+    background-color: #000;
 }
 
 .intro__title {
