--- a/css/game-rps.css
+++ b/css/game-rps.css
@@ -232,7 +232,7 @@
     font-size: 15px;
 }
 
-.modal__content-close {
+.modal__content-guide {
     font-size: 13px;
     margin-bottom: 25px;
 }
@@ -299,7 +299,7 @@
         font-size: 18px;
     }
     
-    .modal__content-close {
+    .modal__content-guide {
         font-size: 16px;
         margin-bottom: 20px;
     }
