--- a/css/game-fdc.css
+++ b/css/game-fdc.css
@@ -112,13 +112,101 @@
 
 .palette-item {
     padding: 3px;
-    border-radius: 10px;
+    border-radius: 5px;
     background-clip: content-box;
     cursor: pointer;
 }
 
+.white-button {
+    width: 25%;
+    padding: 5px;
+}
+
+.modal {
+    display: none;
+    letter-spacing: -0.04em;
+}
+
+.modal-layer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.modal__content {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+    height: auto;
+    padding: 30px;
+    z-index: 9999;
+    border-radius: 5px;
+    background-color: #FFF;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
+}
+
+.modal__content-title {
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+.modal__content-title--result {
+    font-size: 21px;
+    margin-bottom: 10px;
+}
+
+.modal__content-title--result-life {
+    position: fixed;
+    top: 6%;
+    left: 50%;
+    transform: translate(-50%, -6%);
+    font-weight: 700;
+    font-size: 14px;
+    opacity: 0;
+}
+
+.modal__content-title--result-life-img {
+    width: 14px;
+    height: 14px;
+}
+
+@keyframes blinkingEffect {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.modal__content-title--stage {
+    display: inline-block;
+    margin-bottom: 10px;
+    font-size: 17px;
+}
+
+.modal__content-title--desc {
+    font-size: 15px;
+}
+
+.modal__content-close-button {
+    width: 100%;
+    font-size: 14px;
+}
+
 .show {
-    visibility: visible;
+    display: block;
     opacity: 1;
 }
 
