--- a/css/game-fdc.css
+++ b/css/game-fdc.css
@@ -103,8 +103,10 @@
 }
 
 .palette {
+    position: relative;
     display: flex;
     flex-wrap: wrap;
+    left: 0;
     width: 100%;
     height: 100%;
 }
@@ -114,6 +116,16 @@
     border-radius: 5px;
     background-clip: content-box;
     cursor: pointer;
+}
+
+@keyframes vibrationEffect {
+    from {
+        left: 0;
+    }
+    
+    to {
+        left: 3px;
+    }
 }
 
 .white-button {
@@ -179,6 +191,10 @@
     font-size: 14px;
 }
 
+.vibration {
+    animation: vibrationEffect 100ms infinite;
+}
+
 .show {
     display: block;
     opacity: 1;
@@ -229,6 +245,16 @@
     
     .modal__content-close-button {
         font-size: 17px;
+    }
+
+    @keyframes vibrationEffect {
+        from {
+            left: 0;
+        }
+        
+        to {
+            left: 5px;
+        }
     }
 }
 
