:lipstick: 게임 월드 페이지 전체 텍스트 색상을 #3A3845에서 #000으로 변경

--- a/css/game-rps.css
+++ b/css/game-rps.css
@@ -107,7 +107,7 @@
     height: 10%;
     font-weight: 700;
     font-size: 16px;
-    color: #3A3845;
+    color: #000;
 }
 
 .game__score-item:first-child,
