--- a/css/common/styles.css
+++ b/css/common/styles.css
@@ -5,14 +5,14 @@
 
 body {
     font-family: 'Noto Sans KR', sans-serif;
-    color: #3A3845;
+    color: #000;
 }
 
 a,
 button,
 textarea {
     font-family: 'Noto Sans KR', sans-serif;
-    color: #3A3845;
+    color: #000;
 }
 
 a {
