--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@
     flex-flow: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     background-color: #000;
 }
