--- a/css/common/styles.css
+++ b/css/common/styles.css
@@ -3,6 +3,10 @@
     margin: 0;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     overflow-x: hidden;
     font-family: 'Noto Sans KR', sans-serif;
