--- a/css/index.css
+++ b/css/index.css
@@ -92,10 +92,10 @@
 
 .game__overlay {
     position: absolute;
+    width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
     z-index: 2;
 }
 
