--- a/css/game-cm.css
+++ b/css/game-cm.css
@@ -131,23 +131,98 @@
     background-size: 80% auto;
 }
 
-/* .card:hover .card__front {
-    transform: rotateY(0deg);
-} */
-
 .card__back {
     transform: rotateY(0deg);
     background-image: url('../img/game-cm/pawprint.png');
     background-size: 50% auto;
 }
 
-/* .card:hover .card__back {
-    transform: rotateY(180deg);
-} */
+.stage-clear {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+    width: 50%;
+    height: 50%;
+    background-image: url('../img/game-cm/clear.png');
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+    background-position: center center;
+    animation: movingEffect 130ms 10 alternate;
+}
+
+@keyframes movingEffect {
+    from {
+        top: 50%;
+    }
+
+    to {
+        top: 45%;
+    }
+}
 
 .white-button {
     width: 25%;
     padding: 5px;
+}
+
+.modal {
+    display: none;
+    letter-spacing: -0.04em;
+}
+
+.modal-layer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.modal__content {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+    height: auto;
+    padding: 30px;
+    z-index: 9999;
+    border-radius: 5px;
+    background-color: #FFF;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
+}
+
+.modal__content-title {
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+.modal__content-title--result {
+    font-size: 21px;
+    margin-bottom: 10px;
+}
+
+.modal__content-title--stage {
+    display: inline-block;
+    margin-bottom: 10px;
+    font-size: 17px;
+}
+
+.modal__content-title--desc {
+    font-size: 15px;
+}
+
+.modal__content-close-button {
+    width: 100%;
+    font-size: 14px;
 }
 
 .show {
