:adhesive_bandage: time 아이콘을 공통 폴더로 이동함에 따라 CSS 코드 수정

--- a/css/game-fdc.css
+++ b/css/game-fdc.css
@@ -71,7 +71,7 @@
 
 .menu__nav-time::before {
     margin-right: 3px;
-    background-image: url('./../img/game-fdc/time.png');
+    background-image: url('./../img/common/time.png');
 }
 
 .menu__nav-home--button {
